<resources>
    <string name="app_name">SchoolBase</string>
    <string name="enter_username">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="create_account">Создать аккаунт</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_mainPagse"><b><i>Тогда наше приложение
создано для вас!</i></b></string>
</resources>